# Capstone-44-Object-Segmentation

./: .gitignore  CMakeCache.txt  README.md
CHRIS/Capstone_44_Intel_RealSense/: Capstone_44_Intel_RealSense.VC.opendb  Capstone_44_Intel_RealSense.sln
Documents/: C44_Schedule.mpp  OOP_v01.vsdx  Object Segmentation Report.docx  Output of our model~  PCLResearchAssistantGUI.vsdx  Poster48x36.pptx  posterNotes  tasklist.txt  tasklist_4_4_16.txt  ~$ject Segmentation Report.docx
Documents/Schedule/: C44_Integration_milestones.mpp
Documents/latex-final-report/: capstone-report.tex
JAMES/: test_runs.py
JAMES/Librealsense_PCD_Grabber/: CMakeLists.txt
JAMES/obj_hand_seg/: CMakeLists.txt  c44_virtual_scanner.cpp
JAMES/obj_hand_seg/include/: c44_pipes.h
JAMES/obj_hand_seg/src/: c44_geometry.cpp  obj_hand_seg.cpp
JAMES/pcl_custom_global_classification/: CMakeLists.txt
JAMES/pcl_custom_global_classification/models/: 3DScanOfInmoovHand.ply
JAMES/pcl_custom_global_classification/src/: global_classification.cpp  global_classification.cpp.autosave
JAMES/realtime_segmentation/src/: CMakeLists.txt  c44_namespace.cpp
JAMES/research_gui/src/: CMakeLists.txt  main.cpp  pclviewer.cpp  pclviewer.h  pclviewer.ui
Librealsense_PCD_Grabber/: main.cpp
Librealsense_PCD_Grabber/correct_orientation/: five_objects10.pcd  five_objects3.pcd  five_objects6.pcd  five_objects7.pcd  five_objects8.pcd  five_objects9.pcd
Librealsense_PCD_Grabber/noisy/: posxtest_1.pcd  posxtest_10.pcd  posxtest_4.pcd  posxtest_5.pcd  posxtest_7.pcd  posxtest_8.pcd  posxtest_9.pcd
Librealsense_PCD_Grabber/secondsuccess/: west_tabletest10.pcd  west_tabletest2.pcd  west_tabletest3.pcd  west_tabletest5.pcd  west_tabletest6.pcd  west_tabletest8.pcd  west_tabletest9.pcd
MATT/: CMakeLists.txt
MATT/api/: CMakeLists.txt
MATT/api/include/: bounding_box_utils.h  c44_types.h  c44_virtual_scanner.hpp  desc_genner.h  histogram_utils.h  model_index.h  realsense_toolkit.h  rigid_body.h  rigid_body_shared_template.h  segmentation_pipeline.h  segmentation_pipeline.hpp
MATT/api/src/: bounding_box_utils.cpp  histogram_utils.cpp  realsense_toolkit.cpp  rigid_body.cpp  segmentation_pipeline.cpp  segmentation_pipeline.cpp.hide.cpp
MATT/demos/: CMakeLists.txt
MATT/demos/src/matt/: build_vfh_data.cpp  c44_bbox_viewer.cpp  c44_virtual_scanner.cpp  cluster_experiments.cpp  cluster_rec_demo2.cpp  viz_scratchpad.cpp
MATT/demos/src/saroj/: correspondence_grouping.cpp
MATT/demos/src/sean/: sean_demo3.cpp
Meeting Notes/: Capstone.sponsor.meeting.2-19-2016.docx  Senior Capstone Notes.docx  meeting_notes.txt.txt  week 1 meeting notes.docx
Meeting Notes/22-01-2016/: matts-notes.txt
Meeting Notes/january-22-at-intel/: matts-notes.rtf
Meeting Notes/january-7th/: matts-notes.txt
Papers/: Activity view  Interaction View  Linux drivers for RealSense R200 Camera.docx
RealSenseSaveStream/Debug/: RealSenseSaveStream.ilk
RealSenseSaveStream/RealSenseSaveStream/: RealSenseSaveStream.vcxproj  main.cpp
Requirements/: Requirements.docx
SAROJ/3DResearch/: demo03.cpp
SAROJ/3DResearch/Features/localPipeline/: CMakeLists.txt  localPipeline.cpp  vfhcomputation.cpp
SAROJ/3DResearch/PNG2PCD/: CMakeLists.txt
SEAN/LINUX_TEST_FILES/PCL/demo02/: CMakeLists.txt  demo_02_functionTests.cpp~  demo_02_functionTests_backup.cpp  demo_02_functionTests_getPlaneWorks.cpp
SEAN/PCL/NEWEST_PROJECT/poster_demo/: CMakeLists.txt
SEAN/PCL/NEWEST_PROJECT/poster_demo/include/: realsense_toolkit.h  realsense_toolkit_tests.h
SEAN/PCL/NEWEST_PROJECT/poster_demo/log/: log01.txt  log02_desktop.txt  log03_nuc
SEAN/PCL/NEWEST_PROJECT/poster_demo/pictures/: T02_voxel_03.pcd  T02_voxel_06.pcd  T02_voxel_07.pcd  T03_noiseNeighbors_02.pcd  T03_noiseNeighbors_03.pcd  T03_noiseNeighbors_04.pcd  T03_noiseNeighbors_05.pcd  T03_noiseNeighbors_06.pcd  T03_noiseNeighbors_07.pcd  T03_noiseNeighbors_08.pcd  T03_noiseNeighbors_09.pcd  T03_noiseNeighbors_10.pcd  T03_noiseThreshold_02.pcd  T03_noiseThreshold_03.pcd  T03_noiseThreshold_04.pcd  T03_noiseThreshold_05.pcd  T03_noiseThreshold_06.pcd  T03_noiseThreshold_07.pcd  T03_noiseThreshold_08.pcd  T03_noiseThreshold_09.pcd  T03_noiseThreshold_11.pcd  T04_planeIterations_01.pcd  T04_planeThreshold_02.pcd  T04_planeThreshold_03.pcd  T04_planeThreshold_04.pcd  T04_planeThreshold_05.pcd  T04_planeThreshold_06.pcd  T04_planeThreshold_07.pcd  T04_planeThreshold_08.pcd  T04_planeThreshold_09.pcd  T04_planeThreshold_10.pcd  T05_prismIteration_01.pcd  T05_prismIteration_10.pcd  T05_prismThreshold_02.pcd  T05_prismThreshold_03.pcd  T05_prismThreshold_04.pcd  T05_prismThreshold_05.pcd  T05_prismThreshold_06.pcd  T05_prismThreshold_07.pcd  T05_prismThreshold_08.pcd  (+17 more)
SEAN/PCL/NEWEST_PROJECT/poster_demo/src/: poster_demo.cpp  realsense_toolkit_tests.cpp
SEAN/PCL/OLDER_PROJECTS/demo01/: CMakeLists.txt  demo_01.cpp~
SEAN/PCL/OLDER_PROJECTS/test05_EuclideanCluster/: CMakeLists.txt
SEAN/PCL/OLDER_PROJECTS/test05_EuclideanCluster/include/: realsense_toolkit.h  realsense_toolkit_tests.h~
SEAN/PCL/OLDER_PROJECTS/test05_EuclideanCluster/log/: euc_log01
SEAN/PCL/OLDER_PROJECTS/test05_EuclideanCluster/pictures/: cloud_cluster_1.pcd  cloud_cluster_2.pcd  cloud_cluster_3.pcd  cloud_cluster_4.pcd  clustered_objects.cam
SEAN/PCL/OLDER_PROJECTS/test05_EuclideanCluster/src/: demo03.cpp~  realsense_toolkit.cpp  realsense_toolkit.cpp~  realsense_toolkit_tests.cpp~
Schedule/: C44_Integration_milestones.mpp
api/: api.cpp  api.hpp
bounding_boxes/: api.cpp  api.hpp  bounding_box_utils.cpp  bounding_box_utils.hpp  c44_filters.cpp  c44_filters.hpp  c44_pcd_viewer.cpp  geometries.cpp  geometries.hpp  segmentation_pipeline.cpp  segmentation_pipeline.hpp
handsegmentation/: 121_final.ply  3DScanOfInmoovHand.ply
handsegmentation/virtual_scanner_vfh/: CMakeLists.txt
handsegmentation/virtual_scanner_vfh/src/: c44_virtual_scanner.cpp
meeting/: week 1 meeting notes.docx
pcl-build-notes/: CMakeLists.txt  pcl-build-instructions.md  pcl_msvc2015_setup.md
sample_pcd/: PCD_Image_Generation_&_Collection_Guide.odt
(+289 files in other folders)
