cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(PNG2PCD)
find_package(PCL 1.6 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRAR5_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(png2pcd_test png2pcd.cpp)
target_link_libraries(png2pcd_test ${PCL_LIBRARIES}) 